--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,26 +1,54 @@
+# Auto Merge PR Workflow
+# Automatically merges pull requests that meet specific criteria
+#
+# Triggers:
+# - When PR is opened, synchronized, reopened, or marked as ready
+# - When check suite completes (for status check results)
+
 name: Auto Merge PR
 
+# Define when the workflow should run
 on:
+  # Trigger on pull request events
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
     branches:
       - main
 
-jobs:
-  automerge:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+  # Trigger on check suite completion (for status checks)
+  check_suite:
+    types: [completed]
 
+# Define the jobs to run
+jobs:
+  # Auto merge job
+  automerge:
+    # Run on Ubuntu latest
+    runs-on: ubuntu-latest
+
+    # Conditional execution based on event type
+    if: github.event_name == 'pull_request' || github.event.check_suite.conclusion == 'success'
+
+    # Define the steps to execute
     steps:
-      - name: Auto-merge PR
+      # Step 1: Checkout the repository code
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          # Fetch all history for proper merge operations
+          fetch-depth: 0
+
+      # Step 2: Auto-merge PR if all conditions are met
+      - name: Auto-merge PR if all checks pass, branch matches, and PR is ready
         uses: actions/github-script@v7
         with:
+          # Load and execute the external script
           script: |
-            console.log("Debug: Script started");
-            const pr = context.payload.pull_request;
-            if (!pr) {
-              console.log("No PR found");
-              return;
-            }
+            // Load the external auto-merge script
+            const automergeScript = require('./.github/scripts/automerge.js');
             
-            console.log("PR found:", pr.number);
+            // Execute the script with GitHub and context objects
+            await automergeScript({github, context});
+
+          # Provide GitHub token for API access
+          github-token: ${{ secrets.GITHUB_TOKEN }}
