--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,20 +1,34 @@
-name: Auto merge
+name: Auto Merge PRs
 
 on:
   pull_request:
     types:
       - labeled
+      - unlabeled
+      - opened
+      - edited
+      - ready_for_review
+      - reopened
+      - synchronize
+      - review_requested
+      - review_request_removed
+      - submitted
 
 permissions:
-  pull-requests: write
   contents: write
+  pull-requests: write
 
 jobs:
   automerge:
     runs-on: ubuntu-latest
     steps:
-      - name: Enable auto-merge for pull request
-        uses: peter-evans/enable-pull-request-automerge@v3
+      - uses: actions/checkout@v4
+
+      - uses: peter-evans/enable-pull-request-automerge@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           merge-method: squash
+
+      - uses: peter-evans/auto-merge@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
