--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,34 +1,27 @@
-name: Auto Merge PRs
+name: Auto Merge Approved PRs
 
 on:
-  pull_request:
+  pull_request_review:
     types:
-      - labeled
-      - unlabeled
-      - opened
-      - edited
-      - ready_for_review
-      - reopened
-      - synchronize
-      - review_requested
-      - review_request_removed
       - submitted
 
 permissions:
-  contents: write
   pull-requests: write
+  contents: write
 
 jobs:
-  automerge:
+  auto-merge:
     runs-on: ubuntu-latest
+    if: github.event.review.state == 'approved'
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: peter-evans/enable-pull-request-automerge@v3
+      - uses: actions/github-script@v7
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          merge-method: squash
-
-      - uses: peter-evans/auto-merge@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const pull_number = context.payload.pull_request.number;
+            await github.pulls.merge({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number,
+              merge_method: 'squash'
+            });
