--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,27 +1,26 @@
-name: Auto Merge Approved PRs
+name: Auto-merge approved PRs
 
 on:
   pull_request_review:
-    types:
-      - submitted
+    types: [submitted]
 
 permissions:
   pull-requests: write
   contents: write
 
 jobs:
-  auto-merge:
+  automerge:
     runs-on: ubuntu-latest
     if: github.event.review.state == 'approved'
     steps:
-      - uses: actions/github-script@v7
+      - name: Merge the PR
+        uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const pull_number = context.payload.pull_request.number;
             await github.pulls.merge({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              pull_number,
+              pull_number: context.payload.pull_request.number,
               merge_method: 'squash'
             });
