--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -1,5 +1,3 @@
-# Workflow for Java CI with Gradle, Qodana Cloud and GitLeaks
-# This workflow runs on every push to 'main' branch and every pull request to 'main'
 name: Java CI with Gradle, Qodana Cloud and GitLeaks
 
 on:
@@ -8,38 +6,23 @@ on:
   pull_request:
     branches: [ "main" ]
 
-# Define the job 'ci'
 jobs:
-  ci:
-    # Run on the latest Ubuntu runner
+  build:
     runs-on: ubuntu-latest
-    # Set a timeout for the job (35 minutes to accommodate all steps)
-    timeout-minutes: 35
-    # Grant necessary permissions for the job
+    timeout-minutes: 20
     permissions:
-      contents: write
-      pull-requests: write
-      checks: write
-
-    # Define the sequence of steps for the job
+      contents: read
     steps:
-      # Step 1: Checkout the repository code
-      # 'fetch-depth: 0' is needed for Qodana and GitLeaks to analyze the full git history
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          # For pull requests, check out the actual pull request commit, not the merge commit
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
           fetch-depth: 0
-
-      # Step 2: Setup JDK 21 environment
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
-
-      # Step 3: Cache Gradle dependencies to speed up subsequent builds
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
@@ -49,49 +32,53 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-
-      # Step 4: Make the Gradle wrapper executable
       - name: Grant execute permission for Gradle
         run: chmod +x backend/gradlew
+      - name: Build with Gradle
+        run: cd backend && ./gradlew build --no-daemon --warning-mode all
 
-      # Step 5: Run GitLeaks secret detection (early security check)
-      - name: Install and Run GitLeaks scan
-        run: |
-          echo "Installing GitLeaks..."
-          wget https://github.com/gitleaks/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_x64.tar.gz      
-          tar -xzf gitleaks_8.18.0_linux_x64.tar.gz
-          sudo install gitleaks /usr/bin/gitleaks
-          echo "GitLeaks installed successfully!"
-          
-          echo "Running GitLeaks secret detection..."
-          gitleaks detect --source . --verbose --redact
-
-      # Step 6: Build the project and run tests with JaCoCo coverage
-      # '--no-daemon' is used to ensure the Gradle daemon stops after the build
-      # '--warning-mode all' helps identify deprecated features early
-      - name: Build and Run Tests with Coverage
-        run: cd backend && ./gradlew build jacocoTestReport --no-daemon --warning-mode all
-
-      # Step 7: Upload JUnit test reports as artifacts
-      # This allows viewing test results even if the build fails later
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    timeout-minutes: 20
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+          fetch-depth: 0
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+      - name: Cache Gradle packages
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Grant execute permission for Gradle
+        run: chmod +x backend/gradlew
+      - name: Run tests with coverage
+        run: cd backend && ./gradlew test jacocoTestReport --no-daemon --warning-mode all
       - name: Upload test reports
         uses: actions/upload-artifact@v4
         with:
           name: test-reports
           path: backend/build/reports/tests/test
-          if-no-files-found: warn # Warn if no files are found, but don't fail the step
-
-      # Step 8: Upload JaCoCo code coverage reports as artifacts
-      # These can be downloaded and viewed locally
+          if-no-files-found: warn
       - name: Upload JaCoCo coverage report
         uses: actions/upload-artifact@v4
         with:
           name: jacoco-report
           path: backend/build/reports/jacoco/test/
-          if-no-files-found: warn # Warn if no files are found, but don't fail the step
-
-      # Step 9: Upload coverage report to CodeCov
-      # Send JaCoCo coverage data to CodeCov for analysis and reporting
+          if-no-files-found: warn
       - name: Upload coverage to CodeCov
         uses: codecov/codecov-action@v4
         with:
@@ -100,24 +87,24 @@ jobs:
           flags: unittests
           name: codecov-news-platform
 
-      # --- Qodana Scans ---
-
-      # Step 10: Run Qodana analysis for the Backend (JVM) code
-      # Uses Pro linter and requires QODANA_TOKEN for Qodana Cloud connection.
-      # The '--project-dir' argument specifies the directory to analyze.
-      - name: Qodana Backend (JVM) Scan
-        uses: JetBrains/qodana-action@v2025.1
-        env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }} # Ensure this secret exists and holds the correct Project Token from Qodana Cloud
+  security:
+    runs-on: ubuntu-latest
+    needs: [build, test]
+    timeout-minutes: 10
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          # Use 'args' to pass command-line arguments to the qodana CLI, like '--project-dir'
-          args: --project-dir,backend
-          # Use supported parameters for GitHub integration
-          post-pr-comment: true # Post a comment on the Pull Request with results
-          use-annotations: true # Add annotations to the code in the PR
-          upload-result: true   # Upload the full analysis results to Qodana Cloud
-
-      # Step 11: Optional - Upload GitLeaks results as artifact (only on failure)
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+          fetch-depth: 0
+      - name: Install and Run GitLeaks scan
+        run: |
+          wget https://github.com/gitleaks/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_x64.tar.gz
+          tar -xzf gitleaks_8.18.0_linux_x64.tar.gz
+          sudo install gitleaks /usr/bin/gitleaks
+          gitleaks detect --source . --verbose --redact
       - name: Upload GitLeaks scan results
         if: failure()
         uses: actions/upload-artifact@v4
@@ -125,13 +112,24 @@ jobs:
           name: gitleaks-results
           path: .gitleaks-report.json
 
-      # Step 12: Set build status as success
-      # This explicitly sets the 'build' status check to success
-      - name: Set build status
-        if: success()
-        uses: actions/github-script@v7
+  qodana:
+    runs-on: ubuntu-latest
+    needs: [build, test]
+    timeout-minutes: 15
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const sha = context.payload.pull_request ? context.payload.pull_request.head.sha : context.sha;
-            await github.rest.repos.createCommitStatus({
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+          fetch-depth: 0
+      - name: Qodana Backend (JVM) Scan
+        uses: JetBrains/qodana-action@v2025.1
+        env:
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }}
+        with:
+          args: --project-dir,backend
+          post-pr-comment: true
+          use-annotations: true
+          upload-result: true
