--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -28,25 +28,25 @@ jobs:
           repo-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           wait-interval: 10
 
-      # Merge PR
-      - name: Merge pull request
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const prs = await github.rest.pulls.list({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              head: `${context.repo.owner}:${context.ref.replace('refs/heads/', '')}`,
-              state: 'open'
-            });
-            if (prs.data.length > 0) {
-              await github.rest.pulls.merge({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: prs.data[0].number,
-                merge_method: 'squash'
-              });
-              core.info(`✅ Merged PR #${prs.data[0].number}`);
-            } else {
-              core.info('ℹ️ No open PR found.');
-            }
+      # The merge step is now commented out
+      # - name: Merge pull request
+      #   uses: actions/github-script@v7
+      #   with:
+      #     script: |
+      #       const prs = await github.rest.pulls.list({
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         head: `${context.repo.owner}:${context.ref.replace('refs/heads/', '')}`,
+      #         state: 'open'
+      #       });
+      #       if (prs.data.length > 0) {
+      #         await github.rest.pulls.merge({
+      #           owner: context.repo.owner,
+      #           repo: context.repo.repo,
+      #           pull_number: prs.data[0].number,
+      #           merge_method: 'squash'
+      #         });
+      #         core.info(`✅ Merged PR #${prs.data[0].number}`);
+      #       } else {
+      #         core.info('ℹ️ No open PR found.');
+      #       }
