--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -2,27 +2,29 @@ name: Java CI with Gradle, Qodana Cloud and GitLeaks
 
 on:
   push:
-    branches: [ "main", "develop", "master" ]
+    branches: [ "main", "develop", "master" ]  # Runs on push to these branches
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" ]  # Runs on pull requests targeting main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     permissions:
-      contents: read
+      contents: read  # Minimal read-only permissions
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}  # Ensure correct commit is checked out
+          fetch-depth: 0  # Full history for accurate builds
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
+
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
@@ -32,14 +34,16 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
+
       - name: Grant execute permission for Gradle
         run: chmod +x backend/gradlew
+
       - name: Build with Gradle
         run: cd backend && ./gradlew build --no-daemon --warning-mode all
 
   test:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build  # Depends on the build job
     timeout-minutes: 20
     permissions:
       contents: read
@@ -49,11 +53,13 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
           fetch-depth: 0
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
+
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
@@ -63,22 +69,27 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
+
       - name: Grant execute permission for Gradle
         run: chmod +x backend/gradlew
+
       - name: Run tests with coverage
         run: cd backend && ./gradlew test jacocoTestReport --no-daemon --warning-mode all
+
       - name: Upload test reports
         uses: actions/upload-artifact@v4
         with:
           name: test-reports
           path: backend/build/reports/tests/test
           if-no-files-found: warn
+
       - name: Upload JaCoCo coverage report
         uses: actions/upload-artifact@v4
         with:
           name: jacoco-report
           path: backend/build/reports/jacoco/test/
           if-no-files-found: warn
+
       - name: Upload coverage to CodeCov
         uses: codecov/codecov-action@v4
         with:
@@ -99,12 +110,14 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
           fetch-depth: 0
+
       - name: Install and Run GitLeaks scan
         run: |
           wget https://github.com/gitleaks/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_x64.tar.gz
           tar -xzf gitleaks_8.18.0_linux_x64.tar.gz
           sudo install gitleaks /usr/bin/gitleaks
           gitleaks detect --source . --verbose --redact
+
       - name: Upload GitLeaks scan results
         if: failure()
         uses: actions/upload-artifact@v4
@@ -124,6 +137,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
           fetch-depth: 0
+
       - name: Qodana Backend (JVM) Scan
         uses: JetBrains/qodana-action@v2025.1
         env:
