--- a/.gitignore
+++ b/.gitignore
@@ -75,8 +75,8 @@ replay_pid*
 # -------------------------------
 
 # Configuration files with secrets
-application.properties
-*.properties
+application-local.properties
+application-prod.properties
 !application.properties.template
 
 # Environment files
