--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,20 @@ version: "3.8"
 
 services:
   db:
-    image: mariadb:10.7
+    image: mysql:8.0
     restart: always
     env_file:
       - .env
     environment:
-      # Fallback to .env values if available
-      MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
-      MARIADB_DATABASE: ${MARIADB_DATABASE}
-      MARIADB_USER: ${MARIADB_USER}
-      MARIADB_PASSWORD: ${MARIADB_PASSWORD}
+      # Use values from .env or fallback
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
-      - "${DATABASE_LOCAL_PORT}:3306"     # Expose MariaDB port to host using variable
+      - "${DATABASE_LOCAL_PORT}:3306"
     volumes:
-      - ./db_data:/var/lib/mysql          # Persistent DB data
+      - ./db_data:/var/lib/mysql
       - ./db_dumps:/docker-entrypoint-initdb.d:ro   # Initial SQL dumps
 
   app:
@@ -25,9 +25,12 @@ services:
     env_file:
       - .env
     environment:
-      # Spring application should use these for DB connection
-      SPRING_DATASOURCE_URL: jdbc:mariadb://db:3306/${MARIADB_DATABASE}
-      SPRING_DATASOURCE_USERNAME: ${MARIADB_USER}
-      SPRING_DATASOURCE_PASSWORD: ${MARIADB_PASSWORD}
+      # Spring Boot app should use these for database connection
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/${MYSQL_DATABASE}?useUnicode=true&characterEncoding=utf8mb4&useSSL=false
+      SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
+      SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
+      # You can add ADMIN_USERNAME/ADMIN_PASSWORD as needed as well
+      # ADMIN_USERNAME: ${ADMIN_USERNAME}
+      # ADMIN_PASSWORD: ${ADMIN_PASSWORD}
     ports:
-      - "${SPRING_LOCAL_PORT}:8080"       # Expose app port
+      - "${SPRING_LOCAL_PORT}:8080"
